# zeno_project_2026

./: .gitignore  README.md  run.sh
src/marta_msgs/: CMakeLists.txt  README.txt
src/sss_package/: CMakeLists.txt  package.xml
src/sss_package/launch/: allenamento.launch  allenamento_6.launch  allenamento_7.launch.save  sss.launch
src/sss_package/msg/: GeolocatedObject.msg  GeolocatedObjectList.msg  ImageMetadata.msg
src/sss_package/results_phase1/8_classification_texts/: classification_000.txt  classification_001.txt  classification_002.txt  classification_003.txt  classification_004.txt  classification_005.txt  classification_006.txt  classification_007.txt  classification_008.txt  classification_009.txt  classification_010.txt  classification_011.txt  classification_012.txt  classification_013.txt  classification_014.txt  classification_015.txt  classification_016.txt  classification_017.txt  classification_018.txt  classification_019.txt  classification_020.txt  classification_021.txt  classification_022.txt  classification_023.txt  classification_024.txt  classification_025.txt  classification_026.txt  classification_027.txt  classification_028.txt  classification_029.txt  classification_030.txt
src/sss_package/results_phase1/9_list_texts/: SSS_object_list.json  geolocated_list_003.txt  geolocated_list_005.txt  geolocated_list_006.txt  geolocated_list_007.txt  geolocated_list_008.txt  (+22 more)
src/sss_package/scripts/: geolocalization.py  geolocalization_node.py  list_creator.py  object_classification_node.py  realtime_visualizer_node.py  waterfall_creator_node.py
(+196 files in other folders)
